[package]
name = "big-numbers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "factorial"
path = "src/factorial/main.rs"

[dependencies]
indicatif = "0.17.7"
primal = "0.3.2"
reqwest = "0.11.23"
rug = "1.22.0"
termimad = "0.27.0"
tokio = { version = "1.35.1", features = ["full"] }
zip = "0.6.6"
